<resources>
    <string name="app_name">NeteaseM2DClient</string>

    <string name="btn_start">启动服务</string>
    <string name="btn_stop">暂停服务</string>
    <string name="btn_qrCode">扫描二维码</string>
    <string name="btn_update">手动更新</string>

    <string name="txt_title">请打开 PC 端软件并输入 PC 端的局域网地址和监听端口：</string>
    <string name="txt_colon">：</string>

    <string name="edt_ip">127.0.0.1</string>
    <string name="edt_port">1212</string>

    <string name="progress_linking">连接中&#8230;</string>

    <string name="alert_title">错误</string>
    <string name="alert_pos">确定</string>

    <string name="alert_check_per">请先允许程序访问系统通知。</string>
    <string name="alert_ip_format">IP 地址输入格式错误，请检查。</string>
    <string name="alert_port_format">端口应为 0 到 65535 内的纯数字，请检查。</string>
    <string name="alert_connect_failed">无法连接到PC端。</string>
    <string name="alert_disconnect_failed">断开连接错误。</string>
    <string name="alert_break_connect">连接已断开。</string>
    <string name="alert_no_session">网易云音乐 app 未打开。</string>
    <string name="alert_session_destroy">网易云音乐 app 已关闭。</string>

    <string name="tst_connect_success">连接成功</string>
    <string name="tst_auth_failed">授权失败</string>
    <string name="tst_qr_failed">二维码读取失败</string>
    <string name="tst_qr_error">二维码错误</string>
</resources>
