<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/id_txt_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_title"

        android:layout_margin="@dimen/widget_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:id="@+id/id_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/widget_margin"
        app:layout_constraintTop_toBottomOf="@id/id_txt_label"
        app:layout_constraintLeft_toLeftOf="parent">

        <AutoCompleteTextView
            android:id="@+id/id_edt_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"

            android:hint="@string/edt_ip"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_colon"/>

        <AutoCompleteTextView
            android:id="@+id/id_edt_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/edt_port"/>
    </LinearLayout>

    <Button
        android:id="@+id/id_btn_qrCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_qrCode"
        android:layout_marginTop="@dimen/widget_margin"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_ll" />

    <Button
        android:id="@+id/id_btn_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:layout_marginTop="@dimen/widget_margin"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_btn_qrCode" />

</android.support.constraint.ConstraintLayout>